# Copyright (c) 2022 The Bitcoin developers

[workspace]

members = [
    "chronik/abc-rust-error",
    "chronik/abc-rust-lint",
    "chronik/bitcoinsuite-core",
    "chronik/bitcoinsuite-slp",
    "chronik/chronik-bridge",
    "chronik/chronik-db",
    "chronik/chronik-http",
    "chronik/chronik-indexer",
    "chronik/chronik-lib",
    "chronik/chronik-plugin",
    "chronik/chronik-proto",
    "chronik/chronik-util",
]

[workspace.package]
rust-version = "1.76.0"
